# string_studio

./: Cargo.toml  README.md
src/: cmdargs.rs  config.rs  generate.rs  lib.rs  main.rs  output.rs  pattern.rs  xform.rs
src/config/: fragment.rs  output_format.rs  verbose.rs
src/generate/: regex_gen.rs
