[package]
name = "string_studio"
description = "Random string generator for faster and consistant naming when writing content."
license = "MIT"
readme = "README.md"
repository = "https://github.com/zfzackfrost/string_studio"
version = "0.1.0"
authors = ["Zachary Frost"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_regex = "1.1.0"
serde_json = "1.0"
toml = "0.5.6"
clap = "2.33"
rand_regex = "0.14.2"
rand = "0.7.3"
rand_xorshift = "0.2.0"
prettytable-rs = "0.8.0"
termion = "1.5"
