[package]
name = "string_studio"
description = "Random string generator for faster and consistant naming when writing content."
license = "MIT"
readme = "README.md"
repository = "https://github.com/zfzackfrost/string_studio"
version = "0.1.0"
authors = ["Zachary Frost"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Required
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.5" }
clap = { version = "2.33" }
rand_regex = { version = "0.14" }
rand = { version = "0.7" }
rand_xorshift = { version = "0.2" }

# Optional
termion = { version = "1.5", optional = true }
prettytable-rs = { version = "0.8", optional = true }


[features]

default = ["color_messages"]

color_messages = ["termion"]
table_format = ["prettytable-rs"]
