[package]
name = "string_studio"
description = "Random string generator for faster and consistant naming when writing content."
license = "MIT"
readme = "README.md"
repository = "https://github.com/zfzackfrost/string_studio"
version = "0.1.0"
authors = ["Zachary Frost"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Required
directories = { version = "3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.5" }
clap = { version = "2.33" }
rand = { version = "0.7" }
rand_xoshiro = { version = "0.4.0" }
encoding = {version = "0.2.33"}
lazy_static = {version = "1.4"}
regex-syntax = { version = "0.6.18" }
regex = { version = "1" }
Inflector = { version = "0.11.4" }

# Optional
termion = { version = "1.5", optional = true }
prettytable-rs = { version = "0.8", optional = true }


[features]

default = ["color_messages"]

color_messages = ["termion"]
table_format = ["prettytable-rs"]
